@@ -1,5 +1,17 @@
 2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* spatial.hh (TRANSMITTED_INTERVALS_MAX): New constant.
+
+	* spatial.cc (spatial_negotiator::send,
+	spatial_negotiator::receive): Allow transmission of an arbitrary
+	number of spatial negotiation intervals.
+
+	* subconnector.hh (SPIKE_BUFFER_MAX): New constant.
+
+	* subconnector.cc (event_output_subconnector::send,
+	event_input_subconnector_global, event_input_subconnector_local):
+	Allow transmission of an arbitrary number of spikes.
+
 	* spatial.cc (spatial_output_negotiator::negotiate): Bugfix: Use
 	remote_n_proc instead of n_processes when sending to remote side.
 
